--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,65 @@
     "\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Shape:  (677618, 8)\n",
+      "lat           float64\n",
+      "lon           float64\n",
+      "time           object\n",
+      "gws_inst      float64\n",
+      "rtzsm_inst    float64\n",
+      "sfsm_inst     float64\n",
+      "start_date     object\n",
+      "end_date       object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(\"../India_gws_01012023_05092024.csv\")\n",
+    "\n",
+    "print(\"Data Shape: \",data.shape)\n",
+    "\n",
+    "print(\"\\n\\n\")\n",
+    "print(data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.describe()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
