[main] added seed and verbose to false.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -316,7 +316,7 @@
     "        \"bagging_frequency\": 6,\n",
     "        \"bagging_seed\": 42,\n",
     "        \"verbosity\": -1,\n",
-    "        \"seed\": 42,\n",
+    "        \"seed\": seed,\n",
     "    }\n",
     "    # Given it's a regression case, RMSE is used as the metric.\n",
     "\n",
@@ -328,8 +328,8 @@
     "        params,\n",
     "        lg_train,\n",
     "        valid_sets=[lg_train, lg_validation],\n",
-    "        early_stopping_rounds=100,\n",
-    "        verbose_eval=150,\n",
+    "        early_stopping_rounds=40,\n",
+    "        verbose=-1,\n",
     "        evals_result=evals_result_lgbm,\n",
     "    )\n",
     "\n",
