[main] changed parameters.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "max       100.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -289,8 +289,6 @@
      "text": [
       "C:\\Users\\bs\\AppData\\Roaming\\Python\\Python39\\site-packages\\lightgbm\\engine.py:181: UserWarning: 'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. Pass 'early_stopping()' callback via 'callbacks' argument instead.\n",
       "  _log_warning(\"'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. \"\n",
-      "C:\\Users\\bs\\AppData\\Roaming\\Python\\Python39\\site-packages\\lightgbm\\engine.py:239: UserWarning: 'verbose_eval' argument is deprecated and will be removed in a future release of LightGBM. Pass 'log_evaluation()' callback via 'callbacks' argument instead.\n",
-      "  _log_warning(\"'verbose_eval' argument is deprecated and will be removed in a future release of LightGBM. \"\n",
       "C:\\Users\\bs\\AppData\\Roaming\\Python\\Python39\\site-packages\\lightgbm\\engine.py:260: UserWarning: 'evals_result' argument is deprecated and will be removed in a future release of LightGBM. Pass 'record_evaluation()' callback via 'callbacks' argument instead.\n",
       "  _log_warning(\"'evals_result' argument is deprecated and will be removed in a future release of LightGBM. \"\n"
      ]
@@ -299,8 +297,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Warning] Unknown parameter: bagging_frequency\n",
-      "Training until validation scores don't improve for 100 rounds\n"
+      "[1]\ttraining's rmse: 38.9493\tvalid_1's rmse: 38.9918\n",
+      "Training until validation scores don't improve for 40 rounds\n",
+      "[2]\ttraining's rmse: 38.9216\tvalid_1's rmse: 38.9639\n",
+      "[3]\ttraining's rmse: 38.8897\tvalid_1's rmse: 38.932\n",
+      "[4]\ttraining's rmse: 38.862\tvalid_1's rmse: 38.9042\n",
+      "[5]\ttraining's rmse: 38.8301\tvalid_1's rmse: 38.8723\n",
+      "[6]\ttraining's rmse: 38.8025\tvalid_1's rmse: 38.8446\n",
+      "[7]\ttraining's rmse: 38.7708\tvalid_1's rmse: 38.8128\n",
+      "[8]\ttraining's rmse: 38.7432\tvalid_1's rmse: 38.7852\n",
+      "[9]\ttraining's rmse: 38.7115\tvalid_1's rmse: 38.7534\n",
+      "[10]\ttraining's rmse: 38.684\tvalid_1's rmse: 38.7259\n",
+      "[11]\ttraining's rmse: 38.6524\tvalid_1's rmse: 38.6942\n",
+      "[12]\ttraining's rmse: 38.625\tvalid_1's rmse: 38.6667\n",
+      "[13]\ttraining's rmse: 38.5935\tvalid_1's rmse: 38.6351\n",
+      "[14]\ttraining's rmse: 38.5661\tvalid_1's rmse: 38.6076\n",
+      "[15]\ttraining's rmse: 38.5346\tvalid_1's rmse: 38.5761\n",
+      "[16]\ttraining's rmse: 38.5074\tvalid_1's rmse: 38.5488\n",
+      "[17]\ttraining's rmse: 38.4759\tvalid_1's rmse: 38.5173\n",
+      "[18]\ttraining's rmse: 38.4487\tvalid_1's rmse: 38.49\n",
+      "[19]\ttraining's rmse: 38.4174\tvalid_1's rmse: 38.4586\n",
+      "[20]\ttraining's rmse: 38.3903\tvalid_1's rmse: 38.4314\n",
+      "[21]\ttraining's rmse: 38.359\tvalid_1's rmse: 38.4001\n",
+      "[22]\ttraining's rmse: 38.3319\tvalid_1's rmse: 38.3729\n",
+      "[23]\ttraining's rmse: 38.3007\tvalid_1's rmse: 38.3417\n",
+      "[24]\ttraining's rmse: 38.2737\tvalid_1's rmse: 38.3146\n",
+      "[25]\ttraining's rmse: 38.2426\tvalid_1's rmse: 38.2834\n",
+      "[26]\ttraining's rmse: 38.2157\tvalid_1's rmse: 38.2564\n",
+      "[27]\ttraining's rmse: 38.1846\tvalid_1's rmse: 38.2253\n",
+      "[28]\ttraining's rmse: 38.1577\tvalid_1's rmse: 38.1983\n",
+      "[29]\ttraining's rmse: 38.1268\tvalid_1's rmse: 38.1673\n",
+      "[30]\ttraining's rmse: 38.1\tvalid_1's rmse: 38.1404\n",
+      "[31]\ttraining's rmse: 38.069\tvalid_1's rmse: 38.1095\n",
+      "[32]\ttraining's rmse: 38.0423\tvalid_1's rmse: 38.0826\n",
+      "[33]\ttraining's rmse: 38.0115\tvalid_1's rmse: 38.0517\n",
+      "[34]\ttraining's rmse: 37.9848\tvalid_1's rmse: 38.025\n",
+      "[35]\ttraining's rmse: 37.954\tvalid_1's rmse: 37.9942\n",
+      "[36]\ttraining's rmse: 37.9274\tvalid_1's rmse: 37.9675\n",
+      "[37]\ttraining's rmse: 37.8967\tvalid_1's rmse: 37.9367\n"
      ]
     }
    ],
@@ -310,11 +344,11 @@
     "        \"objective\": \"regression\",\n",
     "        \"metric\": \"rmse\",\n",
     "        \"num_leaves\": 100,\n",
-    "        \"learning_rate\": 0.001,\n",
-    "        \"bagging_fraction\": 0.6,\n",
-    "        \"feature_fraction\": 0.6,\n",
+    "        \"learning_rate\": 0.002,\n",
+    "        \"bagging_fraction\": 0.8,\n",
+    "        \"feature_fraction\": 0.7,\n",
     "        \"bagging_frequency\": 6,\n",
-    "        \"bagging_seed\": 42,\n",
+    "        \"bagging_seed\": seed,\n",
     "        \"verbosity\": -1,\n",
     "        \"seed\": seed,\n",
     "    }\n",
@@ -329,7 +363,6 @@
     "        lg_train,\n",
     "        valid_sets=[lg_train, lg_validation],\n",
     "        early_stopping_rounds=40,\n",
-    "        verbose=-1,\n",
     "        evals_result=evals_result_lgbm,\n",
     "    )\n",
     "\n",
