[main] changed params.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -334,7 +334,74 @@
       "[34]\ttraining's rmse: 37.9848\tvalid_1's rmse: 38.025\n",
       "[35]\ttraining's rmse: 37.954\tvalid_1's rmse: 37.9942\n",
       "[36]\ttraining's rmse: 37.9274\tvalid_1's rmse: 37.9675\n",
-      "[37]\ttraining's rmse: 37.8967\tvalid_1's rmse: 37.9367\n"
+      "[37]\ttraining's rmse: 37.8967\tvalid_1's rmse: 37.9367\n",
+      "[38]\ttraining's rmse: 37.8702\tvalid_1's rmse: 37.9101\n",
+      "[39]\ttraining's rmse: 37.8395\tvalid_1's rmse: 37.8794\n",
+      "[40]\ttraining's rmse: 37.8131\tvalid_1's rmse: 37.8529\n",
+      "[41]\ttraining's rmse: 37.7825\tvalid_1's rmse: 37.8223\n",
+      "[42]\ttraining's rmse: 37.7561\tvalid_1's rmse: 37.7958\n",
+      "[43]\ttraining's rmse: 37.7256\tvalid_1's rmse: 37.7652\n",
+      "[44]\ttraining's rmse: 37.6993\tvalid_1's rmse: 37.7388\n",
+      "[45]\ttraining's rmse: 37.6688\tvalid_1's rmse: 37.7084\n",
+      "[46]\ttraining's rmse: 37.6426\tvalid_1's rmse: 37.682\n",
+      "[47]\ttraining's rmse: 37.6122\tvalid_1's rmse: 37.6516\n",
+      "[48]\ttraining's rmse: 37.586\tvalid_1's rmse: 37.6253\n",
+      "[49]\ttraining's rmse: 37.5557\tvalid_1's rmse: 37.595\n",
+      "[50]\ttraining's rmse: 37.5296\tvalid_1's rmse: 37.5688\n",
+      "[51]\ttraining's rmse: 37.4994\tvalid_1's rmse: 37.5385\n",
+      "[52]\ttraining's rmse: 37.4733\tvalid_1's rmse: 37.5124\n",
+      "[53]\ttraining's rmse: 37.4432\tvalid_1's rmse: 37.4822\n",
+      "[54]\ttraining's rmse: 37.4172\tvalid_1's rmse: 37.4561\n",
+      "[55]\ttraining's rmse: 37.3871\tvalid_1's rmse: 37.4259\n",
+      "[56]\ttraining's rmse: 37.3611\tvalid_1's rmse: 37.3999\n",
+      "[57]\ttraining's rmse: 37.3311\tvalid_1's rmse: 37.3699\n",
+      "[58]\ttraining's rmse: 37.3053\tvalid_1's rmse: 37.3439\n",
+      "[59]\ttraining's rmse: 37.2753\tvalid_1's rmse: 37.3139\n",
+      "[60]\ttraining's rmse: 37.2495\tvalid_1's rmse: 37.288\n",
+      "[61]\ttraining's rmse: 37.2196\tvalid_1's rmse: 37.2581\n",
+      "[62]\ttraining's rmse: 37.1939\tvalid_1's rmse: 37.2323\n",
+      "[63]\ttraining's rmse: 37.1641\tvalid_1's rmse: 37.2024\n",
+      "[64]\ttraining's rmse: 37.1384\tvalid_1's rmse: 37.1767\n",
+      "[65]\ttraining's rmse: 37.1086\tvalid_1's rmse: 37.1469\n",
+      "[66]\ttraining's rmse: 37.0831\tvalid_1's rmse: 37.1212\n",
+      "[67]\ttraining's rmse: 37.0534\tvalid_1's rmse: 37.0915\n",
+      "[68]\ttraining's rmse: 37.0278\tvalid_1's rmse: 37.0659\n",
+      "[69]\ttraining's rmse: 36.9982\tvalid_1's rmse: 37.0362\n",
+      "[70]\ttraining's rmse: 36.9727\tvalid_1's rmse: 37.0107\n",
+      "[71]\ttraining's rmse: 36.9432\tvalid_1's rmse: 36.9811\n",
+      "[72]\ttraining's rmse: 36.9178\tvalid_1's rmse: 36.9556\n",
+      "[73]\ttraining's rmse: 36.8883\tvalid_1's rmse: 36.9261\n",
+      "[74]\ttraining's rmse: 36.863\tvalid_1's rmse: 36.9006\n",
+      "[75]\ttraining's rmse: 36.8336\tvalid_1's rmse: 36.8712\n",
+      "[76]\ttraining's rmse: 36.8083\tvalid_1's rmse: 36.8458\n",
+      "[77]\ttraining's rmse: 36.7789\tvalid_1's rmse: 36.8164\n",
+      "[78]\ttraining's rmse: 36.7537\tvalid_1's rmse: 36.7911\n",
+      "[79]\ttraining's rmse: 36.7244\tvalid_1's rmse: 36.7618\n",
+      "[80]\ttraining's rmse: 36.6993\tvalid_1's rmse: 36.7366\n",
+      "[81]\ttraining's rmse: 36.6701\tvalid_1's rmse: 36.7073\n",
+      "[82]\ttraining's rmse: 36.645\tvalid_1's rmse: 36.6822\n",
+      "[83]\ttraining's rmse: 36.6159\tvalid_1's rmse: 36.653\n",
+      "[84]\ttraining's rmse: 36.5908\tvalid_1's rmse: 36.6279\n",
+      "[85]\ttraining's rmse: 36.5618\tvalid_1's rmse: 36.5988\n",
+      "[86]\ttraining's rmse: 36.5368\tvalid_1's rmse: 36.5737\n",
+      "[87]\ttraining's rmse: 36.5078\tvalid_1's rmse: 36.5447\n",
+      "[88]\ttraining's rmse: 36.4829\tvalid_1's rmse: 36.5197\n",
+      "[89]\ttraining's rmse: 36.4539\tvalid_1's rmse: 36.4907\n",
+      "[90]\ttraining's rmse: 36.4291\tvalid_1's rmse: 36.4658\n",
+      "[91]\ttraining's rmse: 36.4002\tvalid_1's rmse: 36.4369\n",
+      "[92]\ttraining's rmse: 36.3755\tvalid_1's rmse: 36.4121\n",
+      "[93]\ttraining's rmse: 36.3467\tvalid_1's rmse: 36.3832\n",
+      "[94]\ttraining's rmse: 36.322\tvalid_1's rmse: 36.3584\n",
+      "[95]\ttraining's rmse: 36.2932\tvalid_1's rmse: 36.3296\n",
+      "[96]\ttraining's rmse: 36.2686\tvalid_1's rmse: 36.3049\n",
+      "[97]\ttraining's rmse: 36.2399\tvalid_1's rmse: 36.2762\n",
+      "[98]\ttraining's rmse: 36.2153\tvalid_1's rmse: 36.2516\n",
+      "[99]\ttraining's rmse: 36.1867\tvalid_1's rmse: 36.2229\n",
+      "[100]\ttraining's rmse: 36.1622\tvalid_1's rmse: 36.1983\n",
+      "Did not meet early stopping. Best iteration is:\n",
+      "[100]\ttraining's rmse: 36.1622\tvalid_1's rmse: 36.1983\n",
+      "MAPE: 7.502971966147771e+18\n",
+      "R²: -7.054945305309435e+38\n"
      ]
     }
    ],
@@ -344,9 +411,9 @@
     "        \"objective\": \"regression\",\n",
     "        \"metric\": \"rmse\",\n",
     "        \"num_leaves\": 100,\n",
-    "        \"learning_rate\": 0.002,\n",
+    "        \"learning_rate\": 0.1,\n",
     "        \"bagging_fraction\": 0.8,\n",
-    "        \"feature_fraction\": 0.7,\n",
+    "        \"feature_fraction\": 0.8,\n",
     "        \"bagging_frequency\": 6,\n",
     "        \"bagging_seed\": seed,\n",
     "        \"verbosity\": -1,\n",
