[main] added lightgbm.

--- a/notebooks/eda_lightgbm.ipynb
+++ b/notebooks/eda_lightgbm.ipynb
@@ -13,6 +13,7 @@
     "import lightgbm as lgb\n",
     "import seaborn as sns\n",
     "import random\n",
+    "import optuna\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -450,6 +451,47 @@
     ")\n",
     "print(f\"MAPE: {mape}\")\n",
     "print(f\"R²: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(trial):\n",
+    "\n",
+    "    dtrain = lgb.Dataset(train_x, label=train_y, categorical_feature=['DEPARTMENT_DESCRIPTION'])\n",
+    "\n",
+    "    param = {\n",
+    "        \"objective\": \"regression\",\n",
+    "        \"metric\": \"rmse\",\n",
+    "        \"verbosity\": -1,\n",
+    "        \"is_unbalance\": True,\n",
+    "        \"boosting_type\": \"gbdt\",\n",
+    "        \"learning_rate\": trial.suggest_float(\"learning_rate\", 1e-3, 0.1, log=True),\n",
+    "        \"reg_alpha\": trial.suggest_float(\"reg_alpha\", 1e-8, 10.0, log=True),\n",
+    "        \"reg_lambda\": trial.suggest_float(\"reg_lambda\", 1e-8, 10.0, log=True),\n",
+    "        \"num_leaves\": trial.suggest_int(\"num_leaves\", 2, 1024),\n",
+    "        \"colsample_bytree\": trial.suggest_float(\"colsample_bytree\", 0.4, 1.0),\n",
+    "        \"subsample\": trial.suggest_float(\"subsample\", 0.4, 1.0),\n",
+    "        \"subsample_freq\": trial.suggest_int(\"bagging_freq\", 1, 9),\n",
+    "        \"min_child_samples\": trial.suggest_int(\"min_child_samples\", 5, 120),\n",
+    "    }\n",
+    "\n",
+    "    # Perform cross-validation\n",
+    "    cv_results = lgb.cv(\n",
+    "        param, dtrain, nfold=5, early_stopping_rounds=20, seed=seed\n",
+    "    )\n",
+    "    # Extract the best score\n",
+    "    best_score = np.mean(cv_results[\"rmse\"])\n",
+    "    return best_score\n",
+    "\n",
+    "\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=100)\n",
+    "\n",
+    "print(f\"Best trial: {study.best_trial.params}\")"
    ]
   }
  ],
