pickle file creation

--- a/notebooks/eda_lstm_tune.ipynb
+++ b/notebooks/eda_lstm_tune.ipynb
@@ -654,6 +654,26 @@
     "adjusted_r2 = 1 - ((1 - r2) * (n - 1)) / (n - p - 1)\n",
     "adjusted_r2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pickle\n",
+    "\n",
+    "# Save the model as a .h5 file\n",
+    "model.save(\"lstm_model.h5\")\n",
+    "\n",
+    "# Optionally, you can save a reference to the file path using pickle\n",
+    "model_path = \"lstm_model.h5\"\n",
+    "\n",
+    "# Save the path to a .pkl file\n",
+    "with open('lstm_path.pkl', 'wb') as file:\n",
+    "    pickle.dump(model_path, file)"
+   ]
   }
  ],
  "metadata": {
