--- a/notebooks/ST-CNN_tune copy.ipynb
+++ b/notebooks/ST-CNN_tune copy.ipynb
@@ -313,6 +313,25 @@
     "adjusted_r2 = 1 - ((1 - r2) * (n - 1)) / (n - p - 1)\n",
     "adjusted_r2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the model as a .h5 file\n",
+    "model.save(\"st_cnn_model.h5\")\n",
+    "\n",
+    "# Optionally, you can save a reference to the file path using pickle\n",
+    "model_path = \"st_cnn_model.h5\"\n",
+    "\n",
+    "# Save the path to a .pkl file\n",
+    "with open('st_cnn_path.pkl', 'wb') as file:\n",
+    "    pickle.dump(model_path, file)"
+   ]
   }
  ],
  "metadata": {
